# fiat

./: CLAUDE.md  Cargo.toml  README.md  benchmarks.md  refdoc.md
benchmarks/: employees.csv  level0.fiat  level1.fiat  level2.fiat  level3.fiat  level4.fiat  level5.fiat  level6.fiat  level7.fiat  level8.fiat
lib/: List.fiat  Set.fiat
src/: desugar.rs  env.rs  error.rs  eval.rs  lib.rs  main.rs  prelude.fiat  prelude.rs  printer.rs  reader.rs  value.rs
src/modules/: firmamentum.rs  float.rs  int.rs  map.rs  math.rs  mod.rs  string.rs  vector.rs
tests/: level0_primitives.rs  level1_closures.rs  level2_collections.rs  level3_strings.rs  level4_results.rs  level5_state_machines.rs  level6_combinators.rs  level7_entities.rs  level8_scripting.rs
