[package]
name = "fiat"
version = "0.1.0"
edition = "2024"

[dependencies]
# None! You don't need any until Level 2 (when you implement persistent vectors).

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"       # noisy during rapid development
missing_panics_doc = "allow"       # same
